name:            AnsiColor
version:         0.1
license:         GPL
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
Synopsis:        Very minimal terminal color "library"
build-type:      Simple
build-depends:   base, haskell98

hs-source-dirs:  src
Exposed-modules: AnsiColor
